Ensure that the page displays elegantly on mobile

--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -27,6 +27,16 @@
 
 body {
   padding-top: 50px;
+  min-width: 320px;
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 24px;
+  }
+  h2 {
+    font-size: 18px;
+  }
 }
 .navbar-header img {
   margin-top: 12px;
@@ -43,9 +53,6 @@ body {
   margin-top: 50px;
 }
 
-.banner {
-  min-height: 600px;
-}
 .banner-inner {
   position: relative;
   width: 100%;
@@ -54,13 +61,20 @@ body {
 .banner-caption {
   position: absolute;
     right: 15%;
-    bottom: 20px;
+    bottom: 0;
     left: 15%;
     z-index: 10;
-    padding-top: 20px;
-    padding-bottom: 20px;
-    color: #333;
-    text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  color: #333;
+  text-align: center;
+  @media (max-width: 480px) {
+    text-align: left;
+    max-width: 50%;
+  }
+}
+.banner-image {
+  max-width: 100%;
 }
 
 .quote {
